[package]
name = "light-arrangements-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "light_arrangements_python"
crate-type = ["cdylib"]
proc-macro = true

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
light-arrangements = { git = "https://github.com/pnor/light-arrangements", features =["visualizer", "ws281x"]}
